jakies logo zrobiłem no i cos tam myslalem nad strona ale skonczylo sie na mysleniu peace

--- a/index.html
+++ b/index.html
@@ -1,18 +1,23 @@
 <!DOCTYPE html>
 <html lang="pl">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Krystian Firla</title>
-
+    <link rel="shortcut icon" href="assets/img/logo.ico" type="image/x-icon">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
+
 <body>
     <div class="container">
         <header>
             <div class="container">
-                <div class="logo">KF</div>
+                <div class="logo">
+                    <!-- KF -->
+                    <img src="assets/img/logo.png" alt="Logo strony">
+                </div>
                 <nav>
                     <div class="pointer">Nasze Realizacje</div>
                     <div class="pointer">Technologia</div>
@@ -22,13 +27,15 @@
             </div>
         </header>
     </div>
-        
+
     <div class="main-container">
         <div class="left">
-            <div class="h1-container">
-                <h1>Budynek Główny ZST</h1>
-            </div>
-            
+            <ul>
+                <li>
+                    <img src="assets/img/screenshot.png" alt="screenshot">
+                    <h1>Budynek Główny ZST</h1>
+                </li>
+            </ul>
             <!-- <h1>Wzgórze Zamkowe Orto</h1> -->
         </div>
         <div class="right">
@@ -51,19 +58,64 @@
 
             </div>
             <div id="technology">
-                <h1>Technologia</h1>
-                <h3>Panoramy sferyczne 360x180</h3>
-                <p>Wirtualne wycieczki oferowane przez nas są połączeniem panoram sferycznych o kącie widzenia 360 stopni horyzontalnie oraz 180 stopni w pionie. Oznacza to, iż możliwe jest rozglądanie się po panoramie w każdym kierunku. Uwiecznione są również "sufit" i "podłoga", dzięki czemu można przedstawić wszystkie walory architektoniczne otoczenia. Kładziemy najsilniejszy nacisk na poprawne sklejanie fotografii w gotową panoramę z uwzględnieniem kolorystyki i jasności poszczególnych fotografii, dzięki czemu scena wygląda jak jedno spójne zdjęcie.</p>
-                <h3>Flash i HTML5</h3>
-                <p>Do tej pory najbardziej uniwersalną i najbardziej rozpowszechnioną technologią osadzania grafiki interaktywnej była technologia Flash. Jednakże nie była ona poprawnie wyświetlana na wszystkich urządzeniach lub nie była w ogóle wspierana (np. wszystkie systemy iOS ) oraz zawierała wiele błędów i luk bezpieczeństwa, przez co ogólnoświatowe trendy nie planują dalszego rozwoju tej technologii. Za obecny standard uważa się technologię HTML5, która jest bardzo prężnie wdrażana w największych serwisach (np. Youtube, Facebook, Twitter). Dzięki zastosowaniu przez nas playera KRPano 1.18.2, który wykorzystuje obydwie wspomniane technologie, oferowane usługi będą bezproblemowo wyświetlane na wszystkich urządzeniach i przeglądarkach.</p>
-                <h3>Wysoka szczegółowość obrazu i HDR</h3>
-                <p>Wiele firm oferujących wykonanie wirtualnej wycieczki tworzy je za pomocą obiektywu ultraszerokokątnego (tzw. Fisheye), dzięki czemu wykonanie panoramy jest bardzo proste i szybkie, gdyż na pełną panoramę 360x180 (pełna sfera) wystarcza 6 zdjęć. Takie podejście jednak skutkuje niską jakością panoramy. Bardzo mała rozdzielczość nie umożliwia wystarczającego powiększana wybranego fragmentu panoramy, a wady optyczne obiektywu fisheye dodatkowo pogarszają jakość obrazu. Nasze panoramy wykonujemy z co najmniej 26 zdjęć, co po połączeniu daje obraz o rozdzielczości około 22 000 x 11 000 pixeli, co zapewnia bardzo wysoką jakość obrazu i wysoką swobodę przybliżania panoramy. Na specjalne życzenie możliwe jest wykonanie panoram o dużo większej rozdzielczości.</p>
-                <p>W szczególnie trudnych przypadkach możliwe jest zastosowanie technologii HDR. Umożliwi to poprawne oddanie charakteru oświetlenia danej panoramy.</p>
+                <div class="content">
+                    <h1>Technologia</h1>
+                    <h3>Panoramy sferyczne 360x180</h3>
+                    <p>Wirtualne wycieczki oferowane przez nas są połączeniem panoram sferycznych o kącie widzenia 360
+                        stopni horyzontalnie oraz 180 stopni w pionie. Oznacza to, iż możliwe jest rozglądanie się po
+                        panoramie w każdym kierunku. Uwiecznione są również "sufit" i "podłoga", dzięki czemu można
+                        przedstawić wszystkie walory architektoniczne otoczenia. Kładziemy najsilniejszy nacisk na
+                        poprawne
+                        sklejanie fotografii w gotową panoramę z uwzględnieniem kolorystyki i jasności poszczególnych
+                        fotografii, dzięki czemu scena wygląda jak jedno spójne zdjęcie.</p>
+                    <h3>Flash i HTML5</h3>
+                    <p>Do tej pory najbardziej uniwersalną i najbardziej rozpowszechnioną technologią osadzania grafiki
+                        interaktywnej była technologia Flash. Jednakże nie była ona poprawnie wyświetlana na wszystkich
+                        urządzeniach lub nie była w ogóle wspierana (np. wszystkie systemy iOS ) oraz zawierała wiele
+                        błędów
+                        i luk bezpieczeństwa, przez co ogólnoświatowe trendy nie planują dalszego rozwoju tej
+                        technologii.
+                        Za obecny standard uważa się technologię HTML5, która jest bardzo prężnie wdrażana w
+                        największych
+                        serwisach (np. Youtube, Facebook, Twitter). Dzięki zastosowaniu przez nas playera KRPano 1.18.2,
+                        który wykorzystuje obydwie wspomniane technologie, oferowane usługi będą bezproblemowo
+                        wyświetlane
+                        na wszystkich urządzeniach i przeglądarkach.</p>
+                    <h3>Wysoka szczegółowość obrazu i HDR</h3>
+                    <p>Wiele firm oferujących wykonanie wirtualnej wycieczki tworzy je za pomocą obiektywu
+                        ultraszerokokątnego (tzw. Fisheye), dzięki czemu wykonanie panoramy jest bardzo proste i
+                        szybkie,
+                        gdyż na pełną panoramę 360x180 (pełna sfera) wystarcza 6 zdjęć. Takie podejście jednak skutkuje
+                        niską jakością panoramy. Bardzo mała rozdzielczość nie umożliwia wystarczającego powiększana
+                        wybranego fragmentu panoramy, a wady optyczne obiektywu fisheye dodatkowo pogarszają jakość
+                        obrazu.
+                        Nasze panoramy wykonujemy z co najmniej 26 zdjęć, co po połączeniu daje obraz o rozdzielczości
+                        około
+                        22 000 x 11 000 pixeli, co zapewnia bardzo wysoką jakość obrazu i wysoką swobodę przybliżania
+                        panoramy. Na specjalne życzenie możliwe jest wykonanie panoram o dużo większej rozdzielczości.
+                    </p>
+                    <p>W szczególnie trudnych przypadkach możliwe jest zastosowanie technologii HDR. Umożliwi to
+                        poprawne
+                        oddanie charakteru oświetlenia danej panoramy.</p>
+                </div>
             </div>
             <div id="offer">
                 <h1>Oferta</h1>
-                <p>W odróżnieniu od większości firm oferujących wykonanie wirtualnej wycieczki, nasze usługi nie są ukierunkowane na jednorazowy, spory zysk lecz na stałą współpracę. Podstawową usługą oferowaną przez nas jest stała opieka nad Państwa wirtualną wycieczką i obejmuje jej wykonanie oraz coroczną aktualizację oraz osadzenie na naszym serwerze. Wycieczka składająca się z ok. 15 panoram, może zajmować nawet 1,5GB, a wykupienie hostingu tak dużej przestrzeni serwerowej może sporo kosztować. Dzięki osadzeniu wirtualnej wycieczki na naszym serwerze, nie muszą się Państwo o to martwić. Dostęp do niej odbywa się przez Państwa stronę (za pomocą przekierowania) oraz przez naszą stronę, co stanowi dla Państwa dodatkową reklamę. Kolejnym udogodnieniem jest abonamentowa forma opłaty za stałą opiekę i aktualizację wirtualnej wycieczki oraz przestrzeń serwerową. Gdyby taka forma opłaty Państwa nie satysfakcjonowała, jest możliwość tradycyjnej jednorazowej opłaty za wykonanie wirtualnej wycieczki. Dodatkowo oferujemy wykupienie samej przestrzeni serwerowej. Dobrą formą promocji firmy mogą być gadżety upominkowe w formie pendriva lub płyty DVD z wirtualną wycieczką, które mogli by Państwo ofiarować swoim klientom.</p>
-                <p>Aby zaspokoić potrzeby wszystkich klientów, ceny są ustalane indywidualnie po wcześniejszym kontakcie drogą mailową.</p>
+                <p>W odróżnieniu od większości firm oferujących wykonanie wirtualnej wycieczki, nasze usługi nie są
+                    ukierunkowane na jednorazowy, spory zysk lecz na stałą współpracę. Podstawową usługą oferowaną przez
+                    nas jest stała opieka nad Państwa wirtualną wycieczką i obejmuje jej wykonanie oraz coroczną
+                    aktualizację oraz osadzenie na naszym serwerze. Wycieczka składająca się z ok. 15 panoram, może
+                    zajmować nawet 1,5GB, a wykupienie hostingu tak dużej przestrzeni serwerowej może sporo kosztować.
+                    Dzięki osadzeniu wirtualnej wycieczki na naszym serwerze, nie muszą się Państwo o to martwić. Dostęp
+                    do niej odbywa się przez Państwa stronę (za pomocą przekierowania) oraz przez naszą stronę, co
+                    stanowi dla Państwa dodatkową reklamę. Kolejnym udogodnieniem jest abonamentowa forma opłaty za
+                    stałą opiekę i aktualizację wirtualnej wycieczki oraz przestrzeń serwerową. Gdyby taka forma opłaty
+                    Państwa nie satysfakcjonowała, jest możliwość tradycyjnej jednorazowej opłaty za wykonanie
+                    wirtualnej wycieczki. Dodatkowo oferujemy wykupienie samej przestrzeni serwerowej. Dobrą formą
+                    promocji firmy mogą być gadżety upominkowe w formie pendriva lub płyty DVD z wirtualną wycieczką,
+                    które mogli by Państwo ofiarować swoim klientom.</p>
+                <p>Aby zaspokoić potrzeby wszystkich klientów, ceny są ustalane indywidualnie po wcześniejszym kontakcie
+                    drogą mailową.</p>
             </div>
             <div id="contact">
                 <h1>Info</h1>
@@ -71,10 +123,11 @@
                 <p>email: kfirla@gmail.com</p>
                 <p>nr kom: 698 490 438</p>
             </div>
-            <div class="copyright">
+            <footer class="copyright">
                 &#9400 copyright Krystian Firla
-            </div>
+            </footer>
         </div>
     </div>
 </body>
+
 </html>
