--- a/index.html
+++ b/index.html
@@ -17,16 +17,99 @@
         <img src="src/img/menu.svg" alt="Otwórz menu" class="toggle-nav">
         <nav class="navbar-links">
             <ul>
-                <li><a href="#">Realizacje</a></li>
-                <li><a href="#">Technologia</a></li>
-                <li><a href="#">Oferta</a></li>
-                <li><a href="#">Kontakt</a></li>
+                <li><a href="index.html">Technologia</a></li>
+                <li><a href="realization.html">Realizacje</a></li>
+                <li><a href="offer.html">Oferta</a></li>
+                <li><a href="contact.html">Kontakt</a></li>
             </ul>
         </nav>
     </header>
     <main>
-
+        <div class="container">
+            <div class="left">
+                <ul>
+                    <li>
+                        <a href="#"><img src="src/img/screenshot.png" alt="jakies zdjecie">
+                            <h1>Przykładowe miejsce #1</h1>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+            <div class="right">
+                <div class="container">
+                    <div class="arrow">
+                        <a href="#main-content"><img src="src/img/arrow-down.svg" alt="Strzałka w dół"
+                                class="arrow-down"></a>
+                    </div>
+                    <ul>
+                        <li>
+                            <a href="#technology">
+                                <h3>Technologia</h3>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#panorama">
+                                <p>Panoramy sferyczne 360x180</p>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#flash">
+                                <p>Flash i HTML5</p>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#hdr">
+                                <p>Wysoka szczegółowość obrazu i HDR</p>
+                            </a>
+                        </li>
+                    </ul>
+                    <p class="rotated">&#9400 copyright Krystian Firla</p>
+                </div>
+            </div>
+        </div>
     </main>
+    <section class="main-content" id="main-content">
+        <h1 id="technology">Technologia</h1>
+        <h3 id="panorama">Panoramy sferyczne 360x180</h3>
+        <p>Wirtualne wycieczki oferowane przez nas są połączeniem panoram sferycznych o kącie widzenia 360
+            stopni horyzontalnie oraz 180 stopni w pionie. Oznacza to, iż możliwe jest rozglądanie się po
+            panoramie w każdym kierunku. Uwiecznione są również "sufit" i "podłoga", dzięki czemu można
+            przedstawić wszystkie walory architektoniczne otoczenia. Kładziemy najsilniejszy nacisk na
+            poprawne
+            sklejanie fotografii w gotową panoramę z uwzględnieniem kolorystyki i jasności poszczególnych
+            fotografii, dzięki czemu scena wygląda jak jedno spójne zdjęcie.</p>
+        <h3 id="flash">Flash i HTML5</h3>
+        <p>Do tej pory najbardziej uniwersalną i najbardziej rozpowszechnioną technologią osadzania grafiki
+            interaktywnej była technologia Flash. Jednakże nie była ona poprawnie wyświetlana na wszystkich
+            urządzeniach lub nie była w ogóle wspierana (np. wszystkie systemy iOS ) oraz zawierała wiele
+            błędów
+            i luk bezpieczeństwa, przez co ogólnoświatowe trendy nie planują dalszego rozwoju tej
+            technologii.
+            Za obecny standard uważa się technologię HTML5, która jest bardzo prężnie wdrażana w
+            największych
+            serwisach (np. Youtube, Facebook, Twitter). Dzięki zastosowaniu przez nas playera KRPano 1.18.2,
+            który wykorzystuje obydwie wspomniane technologie, oferowane usługi będą bezproblemowo
+            wyświetlane
+            na wszystkich urządzeniach i przeglądarkach.</p>
+        <h3 id="hdr">Wysoka szczegółowość obrazu i HDR</h3>
+        <p>Wiele firm oferujących wykonanie wirtualnej wycieczki tworzy je za pomocą obiektywu
+            ultraszerokokątnego (tzw. Fisheye), dzięki czemu wykonanie panoramy jest bardzo proste i
+            szybkie,
+            gdyż na pełną panoramę 360x180 (pełna sfera) wystarcza 6 zdjęć. Takie podejście jednak skutkuje
+            niską jakością panoramy. Bardzo mała rozdzielczość nie umożliwia wystarczającego powiększana
+            wybranego fragmentu panoramy, a wady optyczne obiektywu fisheye dodatkowo pogarszają jakość
+            obrazu.
+            Nasze panoramy wykonujemy z co najmniej 26 zdjęć, co po połączeniu daje obraz o rozdzielczości
+            około
+            22 000 x 11 000 pixeli, co zapewnia bardzo wysoką jakość obrazu i wysoką swobodę przybliżania
+            panoramy. Na specjalne życzenie możliwe jest wykonanie panoram o dużo większej rozdzielczości.
+        </p>
+        <p>W szczególnie trudnych przypadkach możliwe jest zastosowanie technologii HDR. Umożliwi to
+            poprawne
+            oddanie charakteru oświetlenia danej panoramy.</p>
+
+    </section>
+
 </body>
 
 </html>
