--- a/contact.html
+++ b/contact.html
@@ -17,10 +17,18 @@
         <img src="src/img/menu.svg" alt="Otwórz menu" class="toggle-nav">
         <nav class="navbar-links">
             <ul>
-                <li><a href="index.html">Technologia</a></li>
-                <li><a href="realization.html">Realizacje</a></li>
-                <li><a href="offer.html">Oferta</a></li>
-                <li><a href="contact.html">Kontakt</a></li>
+                <li style="--clr: #00ade1">
+                    <a href="index.html" data-text="&nbsp;Technologia">&nbsp;Technologia&nbsp;</a>
+                </li>
+                <li style="--clr: #ff6493">
+                    <a href="realization.html" data-text="&nbsp;Realizacje">&nbsp;Realizacje&nbsp;</a>
+                </li>
+                <li style="--clr: #ff551c">
+                    <a href="offer.html" data-text="&nbsp;Oferta">&nbsp;Oferta&nbsp;</a>
+                </li>
+                <li style="--clr: #dc00d4">
+                    <a href="contact.html" data-text="&nbsp;Kontakt">&nbsp;Kontakt&nbsp;</a>
+                </li>
             </ul>
         </nav>
     </header>
@@ -29,7 +37,8 @@
             <div class="left">
                 <ul>
                     <li>
-                        <a href="#"><img src="src/img/screenshot.png" alt="jakies zdjecie">
+                        <a href="#">
+                            <img src="src/img/screenshot.png" alt="jakies zdjecie">
                             <h1>Przykładowe miejsce #1</h1>
                         </a>
                     </li>
@@ -37,11 +46,20 @@
             </div>
             <div class="right">
                 <div class="container">
-                    <div class="contact">
-                        <h3>Krystian Firla</h3>
-                        <p>Email: kfirla@gmail.com</p>
-                        <p>nr kom: 698 490 438</p>
-                    </div>
+                    <ul class="contact-list">
+                        <li>
+                            <p>Krystian Firla</p>
+                        </li>
+                        <li>
+                            <p>Email:</p>
+                        </li>
+                        <li class="mail">
+                            <p>kfirla@gmail.com</p>
+                        </li>
+                        <li>
+                            <p>nr kom: 698 490 438</p>
+                        </li>
+                    </ul>
                     <p class="rotated">&#9400 copyright Krystian Firla</p>
                 </div>
             </div>
