--- a/index.html
+++ b/index.html
@@ -17,10 +17,18 @@
         <img src="src/img/menu.svg" alt="Otwórz menu" class="toggle-nav">
         <nav class="navbar-links">
             <ul>
-                <li><a href="index.html">Technologia</a></li>
-                <li><a href="realization.html">Realizacje</a></li>
-                <li><a href="offer.html">Oferta</a></li>
-                <li><a href="contact.html">Kontakt</a></li>
+                <li style="--clr: #00ade1">
+                    <a href="index.html" data-text="&nbsp;Technologia">&nbsp;Technologia&nbsp;</a>
+                </li>
+                <li style="--clr: #ff6493">
+                    <a href="realization.html" data-text="&nbsp;Realizacje">&nbsp;Realizacje&nbsp;</a>
+                </li>
+                <li style="--clr: #ff551c">
+                    <a href="offer.html" data-text="&nbsp;Oferta">&nbsp;Oferta&nbsp;</a>
+                </li>
+                <li style="--clr: #dc00d4">
+                    <a href="contact.html" data-text="&nbsp;Kontakt">&nbsp;Kontakt&nbsp;</a>
+                </li>
             </ul>
         </nav>
     </header>
@@ -48,18 +56,18 @@
                             </a>
                         </li>
                         <li>
-                            <a href="#panorama">
-                                <p>Panoramy sferyczne 360x180</p>
-                            </a>
-                        </li>
-                        <li>
                             <a href="#flash">
                                 <p>Flash i HTML5</p>
                             </a>
                         </li>
                         <li>
+                            <a href="#panorama">
+                                <p>Panoramy sferyczne</p>
+                            </a>
+                        </li>
+                        <li>
                             <a href="#hdr">
-                                <p>Wysoka szczegółowość obrazu i HDR</p>
+                                <p>Wysoka szczegółowość obrazu</p>
                             </a>
                         </li>
                     </ul>
