--- a/contact.html
+++ b/contact.html
@@ -13,8 +13,12 @@
 
 <body>
     <header class="navbar">
-        <img src="src/img/logo.png" alt="Logo KF" class="logo">
-        <img src="src/img/menu.svg" alt="Otwórz menu" class="toggle-nav">
+        <div class="logo-container">
+            <img src="src/img/logo.png" alt="Logo KF" class="logo">
+        </div>
+        <div class="hamburger-container">
+            <img src="src/img/menu.svg" alt="Otwórz menu" class="toggle-nav">
+        </div>
         <nav class="navbar-links">
             <ul>
                 <li style="--clr: #00ade1">
