--- a/index.html
+++ b/index.html
@@ -1,32 +1,69 @@
-<?php
-    require_once("header.php");
-?>
+<!DOCTYPE html>
+<html lang="pl">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Krystian Firla</title>
+    <link rel="shortcut icon" href="assets/img/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <script defer type="module" src="assets/js/scripts/main.js"></script>
+    <script defer type="module" src="assets/js/content/main.js"></script>
+</head>
+<body>
+    <header class="navbar">
+        <a href="index.php" class="logo-container">
+            <img src="assets/img/logo.png" alt="Logo KF" class="logo">
+        </a>
+        <div class="hamburger-container">
+            <img src="assets/img/menu.svg" alt="Otwórz menu" class="toggle-nav">
+        </div>
+        <nav class="navbar-links">
+            <ul>
+                <li style="--clr: #00ade1">
+                    <a id="technology" data-text="&nbsp;Technologia">&nbsp;Technologia&nbsp;</a>
+                </li>
+                <li style="--clr: #ff6493">
+                    <a id="realization" data-text="&nbsp;Realizacje">&nbsp;Realizacje&nbsp;</a>
+                </li>
+                <li style="--clr: #ff551c">
+                    <a id="offer" data-text="&nbsp;Oferta">&nbsp;Oferta&nbsp;</a>
+                </li>
+                <li style="--clr: #dc00d4">
+                    <a id="contact" data-text="&nbsp;Kontakt">&nbsp;Kontakt&nbsp;</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+
     <main>
         <div class="container">
             <div class="left">
                 <ul data-slides>
                     <li class="slide" data-active>
-                        <a href="#"><img src="src/img/screenshot.png" alt="jakies zdjecie">
+                        <a href="#">
+                            <img src="assets/img/screenshot.png" alt="jakies zdjecie">
                             <h1>Przykładowe miejsce #1</h1>
                         </a>
                     </li>
                     <li class="slide">
-                        <a href="#"><img src="src/img/Beautiful-Full-HD-Images.jpg" alt="jakies zdjecie">
+                        <a href="#">
+                            <img src="assets/img/Beautiful-Full-HD-Images.jpg" alt="jakies zdjecie">
                             <h1>Przykładowe miejsce #2</h1>
                         </a>
                     </li>
                     <li class="slide">
-                        <a href="#"><img src="src/img/R.jfif" alt="jakies zdjecie">
+                        <a href="#">
+                            <img src="assets/img/R.jfif" alt="jakies zdjecie">
                             <h1>Przykładowe miejsce #3</h1>
                         </a>
                     </li>
                 </ul>
             </div>
             <div class="right">
-                <div class="container">
-                <section class="main-content" id="main-content">
-                    <h1 id="technology">Technologia</h1>
-                    <h3 id="panorama">Panoramy sferyczne 360x180</h3>
+                <section class="main-content">
+                    <h1>Technologia</h1>
+                    <h3>Panoramy sferyczne 360x180</h3>
                     <p>Wirtualne wycieczki oferowane przez nas są połączeniem panoram sferycznych o kącie widzenia 360
                         stopni horyzontalnie oraz 180 stopni w pionie. Oznacza to, iż możliwe jest rozglądanie się po
                         panoramie w każdym kierunku. Uwiecznione są również "sufit" i "podłoga", dzięki czemu można
@@ -34,7 +71,7 @@
                         poprawne
                         sklejanie fotografii w gotową panoramę z uwzględnieniem kolorystyki i jasności poszczególnych
                         fotografii, dzięki czemu scena wygląda jak jedno spójne zdjęcie.</p>
-                    <h3 id="flash">Flash i HTML5</h3>
+                    <h3>Flash i HTML5</h3>
                     <p>Do tej pory najbardziej uniwersalną i najbardziej rozpowszechnioną technologią osadzania grafiki
                         interaktywnej była technologia Flash. Jednakże nie była ona poprawnie wyświetlana na wszystkich
                         urządzeniach lub nie była w ogóle wspierana (np. wszystkie systemy iOS ) oraz zawierała wiele
@@ -43,11 +80,11 @@
                         technologii.
                         Za obecny standard uważa się technologię HTML5, która jest bardzo prężnie wdrażana w
                         największych
-                        serwisach (np. Youtube, Facebook, Twitter). Dzięki zastosowaniu przez nas playera KRPano 1.18.2,
+                        serwisach (np. Youtube, Facebook, Twitter). Dzięki zastosowaniu przez nas playera KrPano 1.18.2,
                         który wykorzystuje obydwie wspomniane technologie, oferowane usługi będą bezproblemowo
                         wyświetlane
                         na wszystkich urządzeniach i przeglądarkach.</p>
-                    <h3 id="hdr">Wysoka szczegółowość obrazu i HDR</h3>
+                    <h3>Wysoka szczegółowość obrazu i HDR</h3>
                     <p>Wiele firm oferujących wykonanie wirtualnej wycieczki tworzy je za pomocą obiektywu
                         ultraszerokokątnego (tzw. Fisheye), dzięki czemu wykonanie panoramy jest bardzo proste i
                         szybkie,
@@ -63,14 +100,10 @@
                     <p>W szczególnie trudnych przypadkach możliwe jest zastosowanie technologii HDR. Umożliwi to
                         poprawne
                         oddanie charakteru oświetlenia danej panoramy.</p>
-
-                <h4 style="margin-top: 2rem;">&copy; copyright Krystia Firla 2022 - <span id="date"></span></h4>
                 </section>
-                    
-                </div>
+                <h4 class="main-content">&copy; copyright Krystia Firla 2022 - <span id="date">2022</span></h4>
             </div>
         </div>
     </main>
-    <?php
-    require_once("footer.php")
-?>
+</body>
+</html>
