no zaczyna to dzialac

--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <title>Krystian Firla</title>
     <link rel="shortcut icon" href="assets/img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="assets/css/style.css">
-    <script defer type="module" src="assets/js/scripts/main.js"></script>
     <script defer type="module" src="assets/js/content/main.js"></script>
+    <script defer type="module" src="assets/js/scripts/main.js"></script>
 </head>
 <body>
     <header class="navbar">
-        <a href="index.php" class="logo-container">
+        <a id="logo-link" href="#" class="logo-container">
             <img src="assets/img/logo.png" alt="Logo KF" class="logo">
         </a>
         <div class="hamburger-container">
@@ -39,7 +39,7 @@
     <main>
         <div class="container">
             <div class="left">
-                <ul data-slides>
+                <ul id="left-img-list" data-slides>
                     <li class="slide" data-active>
                         <a href="#">
                             <img src="assets/img/screenshot.png" alt="jakies zdjecie">
@@ -62,6 +62,9 @@
             </div>
             <div class="right">
                 <section class="main-content">
+
+                    <noscript>Strona nie jest w pełni funkcjonalna ponieważ twoja przeglądarka nie obsługuje JS! </noscript>
+
                     <h1>Technologia</h1>
                     <h3>Panoramy sferyczne 360x180</h3>
                     <p>Wirtualne wycieczki oferowane przez nas są połączeniem panoram sferycznych o kącie widzenia 360
