--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                         poprawne
                         oddanie charakteru oświetlenia danej panoramy.</p>
                 </section>
-                <h4 class="main-content">&copy; copyright Krystia Firla 2022 - <span id="date">2022</span></h4>
+                <h4 class="main-content">&copy; copyright Krystia Firla 2022 <span id="date"></span></h4>
             </div>
         </div>
     </main>
